rock/paper/scissors

--- a/starter_code/index.html
+++ b/starter_code/index.html
@@ -3,7 +3,7 @@
 
     <head>
         <title>
-        <!-- Enter a title for your game here -->
+        
         </title>
         <link type='text/css' rel='stylesheet' href='style.css' />
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
@@ -11,11 +11,12 @@
     </head>
 
     <body>
+  
 
         <div class="container">
-            <div class="choice" id="rock">rock</div>
-            <div class="choice" id="paper">paper</div>
-            <div class="choice" id="scissors">scissors</div>
+          <button class="choice" id="rock" onClick='handleUserClick(this.id)'>rock</button>
+            <button class="choice" id="paper" onClick='handleUserClick(this.id)'>paper</button>
+            <button class="choice" id="scissors" onClick='handleUserClick(this.id)'>scissors</button>
 
             <p>
                 <strong>Computer's choice:</strong><br/>
@@ -23,7 +24,7 @@
             </p>
             <p>
                 <strong>Winner:</strong><br/>
-                <span id="winer"></span>
+                <span id="winner"></span>
             </p>
 
         </div>
